2004-12-21  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (x86_sse_partial_regs_for_cvtsd2ss): Remove.
	* config/i386/i386.h (TARGET_SSE_PARTIAL_REGS_FOR_CVTSD2SS): Remove.
	* config/i386/i386.md (truncdfsf2_1_sse): Don't test it.
	(truncdfsf2_2, truncdfsf2_sse_only): Likewise.
	(truncdfsf2_1_sse_nooverlap, truncdfsf2_2_nooverlap): Remove.
	(truncdfsf2_sse_only_nooverlap): Remove.

	* config/i386/i386.h (TARGET_SSE_TYPELESS_LOAD0): Remove.

2004-12-21  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* expr.c (emit_group_load_1): Return the source if the move
	is a regular move between complex values.

2004-12-20  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/18683
	* config/rs6000/rs6000.c (current_file_function_operand): Only check
	current_function_decl's DECL_RTL if it has already been set.

2004-12-20  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/18683
	* function.c (pop_function_context_from): Don't reset reg_renumber.

2004-12-20  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR middle-end/18776
	* expr.c (write_complex_part): Use a subreg if the original object
	is a hard reg that spans an even number of regs or a MEM.
	(read_complex_part): Likewise.

2004-12-20  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (install-common): Do not install the specs file
	unless SPECS is defined.

2004-12-20  Zdenek Dvorak  <dvorakz@suse.cz>

	PR rtl-optimization/18942
	* simplify-rtx.c (simplify_relational_operation_1): Simplify
	x + cst1 == cst2 to x == cst2 - cst1.  Made static.

2004-12-20  Matt Austern  <austern@apple.com>

	PR c++/19044
	* c-common.c (set_builtin_user_assembler_name): New.
	* c-common.h (set_builtin_user_assembler_name): Declare.
	* c-decl.c (finish_decl): Use set_builtin_user_assembler_name
	
2004-12-20  Diego Novillo  <dnovillo@redhat.com>

	PR tree-optimization/19080

	Merge from tree-cleanup-branch

	* tree-flow-inline.h (clear_call_clobbered): New function.
	* tree-ssa-alias.c (init_alias_info): Call it.
