@@ -2268,7 +2268,7 @@
 		 (if_then_else
 		   (ior (ne (symbol_ref "TARGET_SSE_PARTIAL_REG_DEPENDENCY")
 			    (const_int 0))
-			(ne (symbol_ref "TARGET_SSE_PARTIAL_REGS")
+			(ne (symbol_ref "TARGET_SSE_SPLIT_REGS")
 			    (const_int 0)))
 		   (const_string "V4SF")
 		   (const_string "SF"))
@@ -2358,7 +2358,7 @@
 		 (if_then_else
 		   (ior (ne (symbol_ref "TARGET_SSE_PARTIAL_REG_DEPENDENCY")
 			    (const_int 0))
-			(ne (symbol_ref "TARGET_SSE_PARTIAL_REGS")
+			(ne (symbol_ref "TARGET_SSE_SPLIT_REGS")
 			    (const_int 0)))
 		   (const_string "V4SF")
 		   (const_string "SF"))
@@ -2554,7 +2554,7 @@
 		  of register.  */
 	       (eq_attr "alternative" "7")
 		 (if_then_else
-		   (ne (symbol_ref "TARGET_SSE_PARTIAL_REGS")
+		   (ne (symbol_ref "TARGET_SSE_SPLIT_REGS")
 		       (const_int 0))
 		   (const_string "V1DF")
 		   (const_string "DF"))
@@ -2674,7 +2674,7 @@
 		  of register.  */
 	       (eq_attr "alternative" "7")
 		 (if_then_else
-		   (ne (symbol_ref "TARGET_SSE_PARTIAL_REGS")
+		   (ne (symbol_ref "TARGET_SSE_SPLIT_REGS")
 		       (const_int 0))
 		   (const_string "V1DF")
 		   (const_string "DF"))
@@ -4480,23 +4480,6 @@
    (set_attr "athlon_decode" "vector,double")
    (set_attr "fp_int_src" "true")])
 
-; Avoid possible reformatting penalty on the destination by first
-; zeroing it out
-(define_split
-  [(set (match_operand:SF 0 "register_operand" "")
-	(float:SF (match_operand:SI 1 "nonimmediate_operand" "")))]
-  "reload_completed
-   && TARGET_SSE_MATH && TARGET_SSE_PARTIAL_REGS
-   && SSE_REG_P (operands[0])"
-  [(const_int 0)]
-{
-  rtx dest;
-  dest = simplify_gen_subreg (V4SFmode, operands[0], SFmode, 0);
-  emit_insn (gen_sse_clrv4sf (dest, CONST0_RTX (V4SFmode)));
-  emit_insn (gen_cvtsi2ss (dest, dest, operands[1]));
-  DONE;
-})
-
 (define_insn "*floatsisf2_i387"
   [(set (match_operand:SF 0 "register_operand" "=f,f")
 	(float:SF (match_operand:SI 1 "nonimmediate_operand" "m,?r")))]
@@ -4537,23 +4520,6 @@
    (set_attr "mode" "SF")
    (set_attr "athlon_decode" "vector,double")
    (set_attr "fp_int_src" "true")])
-
-; Avoid possible reformatting penalty on the destination by first
-; zeroing it out
-(define_split
-  [(set (match_operand:SF 0 "register_operand" "")
-	(float:SF (match_operand:DI 1 "nonimmediate_operand" "")))]
-  "reload_completed
-   && TARGET_64BIT && TARGET_SSE_MATH && TARGET_SSE_PARTIAL_REGS
-   && SSE_REG_P (operands[0])"
-  [(const_int 0)]
-{
-  rtx dest;
-  dest = simplify_gen_subreg (V4SFmode, operands[0], SFmode, 0);
-  emit_insn (gen_sse_clrv4sf (dest, CONST0_RTX (V4SFmode)));
-  emit_insn (gen_cvtsi2ssq (dest, dest, operands[1]));
-  DONE;
-})
 
 (define_insn "*floatdisf2_i387"
   [(set (match_operand:SF 0 "register_operand" "=f,f")
@@ -18266,8 +18232,7 @@
    (set (match_dup 0) (ior:V2DF (match_dup 6)
 			        (match_dup 7)))]
 {
-  if (GET_MODE (operands[2]) == DFmode
-      && TARGET_SSE_PARTIAL_REGS && !optimize_size)
+  if (TARGET_SSE_SPLIT_REGS && !optimize_size)
     {
       rtx op = simplify_gen_subreg (V2DFmode, operands[2], DFmode, 0);
       emit_insn (gen_sse2_unpcklpd (op, op, op));
@@ -18429,8 +18394,7 @@
   [(set (match_dup 0) (match_op_dup 1 [(match_dup 0) (match_dup 5)]))
    (set (match_dup 8) (and:V2DF (match_dup 6) (match_dup 7)))]
 {
-  if (TARGET_SSE_PARTIAL_REGS && !optimize_size
-      && GET_MODE (operands[2]) == DFmode)
+  if (TARGET_SSE_SPLIT_REGS && !optimize_size)
     {
       if (REG_P (operands[2]))
 	{
